[package]
name = "henx"
version = "0.1.0"
edition = "2021"

[dependencies]
scap = { git = "https://github.com/helmerapp/scap.git", branch = "main" }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre", branch = "main" }
swift-rs = "1.0.5"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.1.7"
